k8s/apps/whoami/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
  namespace: whoami
  labels:
    app: whoami
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`whoami.pane.run`)
    services:
    - name: whoami
      namespace: whoami
      port: 80
  tls:
    secretName: whoami-tls
